[gd_scene load_steps=3 format=3 uid="uid://b1nlow5nchqav"]

[ext_resource type="Script" uid="uid://ct5mieol7eeyv" path="res://hdr_controls.gd" id="1_pfloc"]
[ext_resource type="PackedScene" uid="uid://gywmqtpy1jlq" path="res://slider_control.tscn" id="1_usl2s"]

[node name="HDRControls" type="VBoxContainer"]
script = ExtResource("1_pfloc")

[node name="SceneSwitcher" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="SceneSwitcher"]
layout_mode = 2
text = "Scene"

[node name="SceneChoice" type="OptionButton" parent="SceneSwitcher"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Sponza"
popup/item_0/id = 0
popup/item_1/text = "HDR Tester"
popup/item_1/id = 1

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="EnableHDRButton" type="CheckButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Enable HDR"

[node name="RefLuminanceSlider" parent="." instance=ExtResource("1_usl2s")]
unique_name_in_owner = true
layout_mode = 2
max_value = 2000.0
step = 0.0
title = "Reference Luminance"
value = 200.0

[connection signal="item_selected" from="SceneSwitcher/SceneChoice" to="." method="_on_scene_choice_item_selected"]
[connection signal="toggled" from="EnableHDRButton" to="." method="_on_enable_hdr_button_toggled"]
[connection signal="value_changed" from="RefLuminanceSlider" to="." method="_on_reference_luminance_slider_value_changed"]
